# Discord-bot

./: .gitignore  CHANGES.md  DEPLOYMENT.md  GITHUB_TRANSFER.md  README.md  bot.py  bot_encoded.txt  bot_no_db.py  config.py  database.py  main.py  member_counter.py  models.py  pad_management.py  permissions.py  pyproject.toml  render.yaml  replit.md  requirements.txt  roblox_verification.py  ticket_system.py
